super awesome mega-fix with unintended awesome collateral-fixes * markdown supported in chat * by proxy, paragraphs are *also* supported in chat now * AND EVEN PROXIER, the issue with emoji not showing properly is fixed

--- a/public/css/game-pane.styl
+++ b/public/css/game-pane.styl
@@ -29,6 +29,11 @@
   .own-message
     border-left: 4px solid #333
     padding-left: 2px
+    
+  markdown
+  
+    p:first-child
+      display:inline
 
 // Name tags
 .label-contributor-1, .label-contributor-2
